# haal

./: Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: build.yml
config/: init.lua  logo.txt
src/: colour.rs  main.rs  stat.rs  stat_cpu.rs  stat_disk.rs  stat_gpu.rs  stat_mem.rs  stat_os.rs  stat_shell.rs  stat_terminal.rs  stat_uptime.rs  stat_user.rs  stat_vendor.rs  stat_wm.rs
