[package]
name = "haal"
version = "0.1.1"
edition = "2024"
description = "a small system fetch tool"
license = "Unlicense"

[dependencies]
colored_text = "0.5.1"
dirs = "6.0.0"
humantime = "2.4.0"
mlua = { version = "0.12.0", features = ["lua54", "vendored"] }
sysinfo = "0.38.4"
system-uptime = "0.2.0"
